location and selection added!
